Fix `overflow: ellipsis left` aligning to right

--- a/utilus/overflow.styl
+++ b/utilus/overflow.styl
@@ -12,6 +12,6 @@ overflow(type, dir='right')
 		text-overflow: ellipsis
 		if dir is 'left'
 			direction: rtl
-			text-align: right
+			text-align: left
 	else
 		overflow: unquote(type)
